# linear-octree

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
cmake/: CMakeBuildExec.cmake  CMakeConfigCUDA.cmake  CMakeLibraries.cmake  CMakeSources.cmake  linoctreeConfig.cmake.in
examples/: CMakeLists.txt  example.cpp
inc/: build_log.hpp  encoding_log.hpp  main_options.hpp  util.hpp
inc/cuda/: kernels.hpp  linear_octree_gpu.hpp
inc/diagnostics/: locality_metrics.hpp
inc/encoding/: encoding_types.hpp  point_encoder.hpp  point_encoder_factory.hpp
inc/geometry/: point_containers.hpp
inc/kernels/: kernel_factory.hpp  kernel_types.hpp
inc/readers/: handlers.hpp
inc/search_algorithms/: search_types.hpp
inc/structures/: container_types.hpp  linear_octree.hpp  octree.hpp  structure_types.hpp
scripts/: install_eigen3.sh  install_laslib.sh  install_pcl.sh
src/: main_options.cpp  octree.cpp
tests/: CMakeLists.txt
tests/geometry/: test_aligned_allocator.cpp
tests/structures/: test_octree_advanced.cpp
